# una_health_challenge

./: README.md  asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
api/: test_api_endpoints.py  urls.py  views.py
glucose_levels/: apps.py  models.py  serializer.py  serializers.py
glucose_levels/management/commands/: import_glucose_levels_csv.py
glucose_levels/migrations/: 0001_initial.py  0002_initial.py  0003_alter_glucoselevel_glucose_value_trend.py
users/: models.py  test_user.py
users/migrations/: 0001_initial.py
