[project]
name = "una-health-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "daniel rios",email = "misterrios@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "markdown (>=3.8,<4.0)",
    "django-filter (>=25.1,<26.0)"
]

[tool.poetry]
package-mode=false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
django-extensions = "^4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
